...
        item {
            Box(contentAlignment = Alignment.Center, modifier = Modifier.fillMaxWidth()) {
                Button(
                    onClick = onAddClick,
                    colors = ButtonDefaults.buttonColors(backgroundColor = Color.LightGray)
                ) {
                    Text(text = "Add")
                }
            }
        }
    }
}

...
                text = item.name,
                style = Typography.h5.copy(fontSize = 28.sp),
                modifier = Modifier.weight(1f)
            )
            Icon(
                imageVector = Icons.Rounded.Refresh,
                contentDescription = "Refresh",
                modifier = Modifier
                    .size(28.dp)
                    .clickable { onRefreshClick() }
            )
        }
    }
...
